# MonStock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml  release-tauri.yml  release.yml
docs/: design-prompt.md  monstock_ui_v2.html
monstock-backup/: Cargo.toml
monstock-backup/src/: lib.rs
monstock-cli/: Cargo.toml
monstock-cli/src/: cli.rs  config.rs  doctor.rs  lib.rs  logging.rs  process.rs  seed.rs
monstock-core/: .env  Cargo.toml
monstock-core/migrations/2026-06-25-130055-0000_create_initial_tables/: down.sql  up.sql
monstock-core/migrations/2026-06-25-130056-0001_create_expense_categories/: down.sql  up.sql
monstock-core/migrations/2026-06-25-130057-0002_add_supplier_name_unique/: down.sql  up.sql
monstock-core/src/: db.rs  lib.rs  schema.rs
monstock-core/src/models/: expense.rs  expense_category.rs  mod.rs  product.rs  purchase_order.rs  supplier.rs  transaction.rs
monstock-core/src/repos/: expense_category_repo.rs  expense_repo.rs  mod.rs  product_repo.rs  purchase_order_repo.rs  supplier_repo.rs  transaction_repo.rs
monstock-core/src/services/: dashboard_service.rs  expense_category_service.rs  expense_service.rs  mod.rs  product_service.rs  purchase_order_service.rs  sale_service.rs  supplier_service.rs
monstock-core/tests/: repo_tests.rs
monstock-desktop/: Cargo.toml
monstock-desktop/src/: backup.rs  barcode_scanner.rs  components.rs  i18n.rs  icons.rs  main.rs  style.rs
monstock-desktop/src/components/: data_table.rs  mod.rs
monstock-desktop/src/screens/: dashboard_screen.rs  expenses_screen.rs  mod.rs  products_screen.rs  purchase_orders_screen.rs  sales_screen.rs  settings_screen.rs
monstock-import/: Cargo.toml
monstock-import/src/: lib.rs
monstock-tauri/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsr.config.json  vite.config.ts  vitest.config.ts
monstock-tauri/src/: main.tsx  routeTree.gen.ts  styles.css
monstock-tauri/src-tauri/: Cargo.toml  tauri.conf.json
monstock-tauri/src-tauri/capabilities/: default.json
monstock-tauri/src-tauri/icons/: icon.icns
monstock-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
monstock-tauri/src/components/: error-boundary.tsx  sidebar.tsx  toast.tsx  topbar.tsx
monstock-tauri/src/components/__tests__/: complex.test.tsx  edge-cases.test.tsx  error-handling.test.tsx  ui.test.tsx
monstock-tauri/src/components/ui/: button.tsx  card.tsx  data-table.tsx  form-field.tsx  index.ts  modal.tsx  page-header.tsx  pagination.tsx  stock-bar.tsx  tag.tsx
monstock-tauri/src/i18n/: en.json  fr.json  index.tsx
monstock-tauri/src/lib/: api.ts  constants.ts  utils.ts
monstock-tauri/src/lib/__tests__/: utils.test.ts
monstock-tauri/src/routes/: __root.tsx  barcodes.tsx  end-of-day.tsx  expenses.tsx  index.tsx  products.tsx  purchase-orders.tsx  suppliers.tsx
