[workspace]
resolver = "2"
members = ["monstock-core", "monstock-desktop", "monstock-backup", "monstock-import", "monstock-cli", "monstock-tauri/src-tauri"]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
diesel = "2.2"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"