[package]
name = "monstock-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "monstock"
path = "src/main.rs"

[dependencies]
monstock-core = { path = "../monstock-core" }
monstock-backup = { path = "../monstock-backup" }
monstock-import = { path = "../monstock-import" }
diesel = { workspace = true, features = ["sqlite"] }
chrono = { workspace = true }
dirs = "6.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
