[package]
name = "monstock-core"
version = "0.3.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }

diesel_migrations = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
